[workspace]
members = [".", "client", "server", "games/*/"]

[package]
name = "eviov"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Orbital shooters game"

[dependencies]
derive_more = "0.99.2"
getset = "0.0.9"
num-derive = "0.3.0"
num-traits = "0.2.11"
operator-sugar = "0.1.2"
serde = {version = "1.0.104", features = ["derive"]}

[profile.release]
opt-level = 3 # change to "s" or "z" when we need to
panic = "abort"
lto = true
