[workspace]
members = [".", "codegen", "client", "server", "games/*/"]

[package]
name = "eviov"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Orbital shooters game"

[features]
trait-refcell = []
trait-rwlock = ["parking_lot"]
trait-tung = ["tokio-tungstenite", "tokio", "url", "parking_lot"]
trait-stdweb = ["stdweb"]

[dependencies]
async-trait = "0.1.22"
cfg-if = "0.1.10"
derive_more = "0.99.2"
eviov-codegen = {path = "codegen"}
futures = "0.3.1"
getset = "0.0.9"
log = "0.4.8"
num-derive = "0.3.0"
num-traits = "0.2.11"
operator-sugar = "0.1.2"
parking_lot = {version = "0.10.0", optional = true}
rmp-serde = "0.14.0"
serde = {version = "1.0.104", features = ["derive"]}
stdweb = {version = "0.4.20", optional = true}
tokio = {version = "0.2.9", features = ["net"], optional = true}
tokio-tungstenite = {version = "0.10.1", optional = true}
url = {version = "2.1.1", optional = true}

[profile.release]
opt-level = 3 # change to "s" or "z" when we need to
panic = "abort"
lto = true
