[package]
name = "eviov-client"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/eviov"
homepage = "https://github.com/SOF3/eviov"
readme = "README.md"
description = "Orbital shooters game"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirmod = "0.2.0-alpha.1"
eviov = {path = ".."}
log = "0.4.8"
rmp-serde = "0.14.0"
stdweb = "0.4.20"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.35"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
