[package]
name = "eviov-client"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Orbital shooters game"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.26"
eviov = {path = "../common", default-features = false, features = ["wasm"]}
log = "0.4.8"
rand = "0.7.3"
rmp-serde = "0.14.3"
stdweb = "0.4.20"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.37"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
