[package]
name = "eviov-codegen"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Code generation crate for eviov"

[lib]
name = "codegen"
proc-macro = true

[dependencies]
heck = "0.3.1"
matches2 = "1.2.1"
proc-macro2 = "1.0.12"
quote = "1.0.4"
syn = "1.0.20"
