[package]
name = "eviov-context"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Platform-dependent (wasm/native) adapters for eviov"

[features]
wasm = ["stdweb", "wasm-bindgen-futures"]
not-wasm = ["tokio"]

[dependencies]
async-trait = "0.1.28"
derive_more = "0.99.5"
eviov-codegen = {path = "../codegen"}
futures = "0.3.1"
stdweb = {version = "0.4.20", optional = true}
tokio = {version = "0.2.14", features = ["net", "time"], optional = true}
wasm-bindgen-futures = {version = "0.4.10", optional = true}
