[package]
name = "eviov-phy"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "../README.md"
description = "Eviov physics bundle"

[lib]
name = "phy"

[dependencies]
eviov-units = {version = "0.0.0", path = "../units"}
getset = "0.1.1"
shrev = "1.1.1"
specs = "0.16.1"
