[package]
name = "eviov-render"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "../README.md"
description = "Eviov render bundle"

[lib]
name = "render"

[dependencies]
amethyst_rendy = {version = "0.15.3"}
eviov-phy = {version = "0.0.0", path = "../phy"}
eviov-units = {version = "0.0.0", path = "../units"}
getset = "0.1.1"
log = "0.4.11"
specs = "0.16.1"
