[package]
name = "eviov-save"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "../README.md"
description = "Eviov data saving bundle"

[lib]
name = "save"

[dependencies]
eviov-phy = {version = "0.0.0", path = "../phy"}
eviov-units = {version = "0.0.0", path = "../units"}
getset = "0.1.1"
# log = "0.4.11"
# rand = "0.7.3"
rmp-serde = "0.15.4"
specs = "0.16.1"
serde = {version = "1.0.114", features = ["derive"]}
serde_iter = "0.1.1"
