[package]
name = "eviov-server"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Orbital shooters game"

[features]
strict = ["eviov/strict"]

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
async-trait = "0.1.22"
crossbeam = "0.7.3"
derive_more = "0.99.2"
eviov = {path = "..", default-features = false, features = ["not-wasm"]}
futures = {version = "0.3.1", features = ["compat"]}
getset = "0.0.9"
legion = "0.2.1"
log = "0.4.8"
parking_lot = "0.10.0"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rmp-serde = "0.14.0"
serde = {version = "1.0.104", features = ["derive"]}
smallvec = "1.1.0"
tokio = {version = "0.2.9", features = ["time"]}
