[package]
name = "eviov-server"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Orbital shooters game"

[dependencies]
async-trait = "0.1.26"
crossbeam = "0.7.3"
derive_more = "0.99.4"
eviov = {path = "../common", default-features = false, features = ["not-wasm"]}
futures = {version = "0.3.1", features = ["compat"]}
getset = "0.1.0"
legion = "0.2.1"
log = "0.4.8"
parking_lot = "0.10.0"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rmp-serde = "0.14.3"
serde = {version = "1.0.105", features = ["derive"]}
smallvec = "1.1.0"
tokio = {version = "0.2.13", features = ["macros", "rt-threaded", "tcp", "time"]}
tokio-tungstenite = "0.10.1"
