[package]
name = "eviov-server"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "Orbital shooters game"

[dependencies]
async-trait = "0.1.36"
crossbeam = "0.7.3"
derive_more = "0.99.9"
eviov = {path = "../common", default-features = false, features = ["not-wasm"]}
futures = {version = "0.3.5", features = ["compat"]}
getset = "0.1.1"
legion = "0.2.4"
log = "0.4.11"
parking_lot = "0.11.0"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rmp-serde = "0.14.4"
serde = {version = "1.0.114", features = ["derive"]}
smallvec = "1.4.1"
tokio = {version = "0.2.22", features = ["macros", "rt-threaded", "tcp", "time"]}
tokio-tungstenite = "0.10.1"
