[package]
name = "eviov-transport"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "eviov communications framework"

[features]
wasm = ["stdweb", "eviov-context/wasm"]
not-wasm = ["parking_lot", "tokio", "tokio-tungstenite", "url", "eviov-context/not-wasm"]

[dependencies]
async-trait = "0.1.22"
eviov-context = {path = "../context"}
eviov-proto = {path = "../proto"}
eviov-types = {path = "../types"}
futures = "0.3.1"
instant = "0.1.2"
parking_lot = {version = "0.10.0", optional = true}
ring = "0.16.10"
rmp-serde = "0.14.3"
serde = {version = "1.0.105", features = ["derive"]}
stdweb = {version = "0.4.20", optional = true}
tokio = {version = "0.2.13", features = ["net", "time"], optional = true}
tokio-tungstenite = {version = "0.10.1", optional = true}
typemap = {version = "0.3.3", git = "https://github.com/SOF3/rust-typemap"}
url = {version = "2.1.1", optional = true}
