[package]
name = "eviov-types"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "README.md"
description = "eviov ID and unit newtypes"

[dependencies]
derive_more = "0.99.5"
getset = "0.1.0"
num-derive = "0.3.0"
num-traits = "0.2.11"
operator-sugar = "0.1.2"
serde = {version = "1.0.109", features = ["derive"]}
