[package]
name = "eviov-units"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "../README.md"
description = "Declares units used in Eviov"

[lib]
name = "units"

[dependencies]
getset = "0.1.1"
nalgebra = {version = "0.21.1", features = ["serde-serialize"]}
serde = {version = "1.0.114", features = ["derive"]}
