[package]
name = "eviov-util"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/eviov/eviov"
homepage = "https://github.com/eviov/eviov"
readme = "../README.md"
description = "Miscellaneous utils used in eviov"

[lib]
name = "util"

[dependencies]
nalgebra = "0.21.1"
